<!--
  ~ Copyright (c) 2015. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<resources>
    <string name="app_name">DemoDay1</string>
    <string name="Email">Email</string>
    <string name="Pass">Password</string>
    <string name="EmailHint">Enter your Email ...</string>
    <string name="PassHint">Enter your Pass ...</string>
    <string name="SignIn">SignIn</string>
    <string name="Exit">Exit</string>
</resources>
